--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-brightbox (0.6.36-0bbox3) hardy; urgency=low
+
+  * Fix build dependencies
+
+ -- John Leach <john@brightbox.co.uk>  Tue, 22 Apr 2009 18:31:08 +0100
+
 nginx-brightbox (0.6.36-0bbox2) hardy; urgency=low
 
   * Added phusion passenger support
